import fr.brouillard.oss.jgitver.Strategies

plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.0.5'
    id 'io.spring.dependency-management' version '1.1.0'
    id("fr.brouillard.oss.gradle.jgitver") version "0.10.0-rc03"
}

group = 'platform.media'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('test') {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

tasks.named('jacocoTestReport') {
    dependsOn test // tests are required to run before generating the report
}

jgitver {
    strategy Strategies.MAVEN
    autoIncrementPatch true
}
